examples/bad/AssumedMain.vv
-- A program demonstrating missing 'main' defintion

import Type ;;

assume main : U 2 ;;